# lab12

./: cget.cpp
lab12-master/: CMakeLists.txt
